feat: refactor api and implement FCM feat: implement UX/UI for sign up page
